--- a/produkte.html
+++ b/produkte.html
@@ -70,6 +70,42 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="kastanienhonig.jpg" class="card-img-top" alt="Kastanienhonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Kastanienhonig</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="rapshonig.jpg" class="card-img-top" alt="Rapshonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Rapshonig</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class "card">
+                    <img src="bluetencremehonig.jpg" class="card-img-top" alt="Blütencremehonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Blütencremehonig</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class "card">
+                    <img src="waldhonig.jpg" class="card-img-top" alt="Waldhonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Waldhonig</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     
