--- a/produkte.html
+++ b/produkte.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Produkte - Imkerei Weissenbacher</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7Rxnatzjc5pxSGFJ5MBlrJ66FkjIWHMcB6ah5mZPv6o" crossorigin="anonymous">
     <style>
         body {
             background-color: #fff8dc; /* Hellgelb */
         }
         .price-table {
-            width: 50%;
+            width: 70%;
             margin: 0 auto;
         }
         .price-table th {
@@ -49,7 +49,36 @@
     
     <div class="container mt-5">
         <h2>Unsere Produkte</h2>
-        <table class="table price-table">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="akazienhonig.jpg" class="card-img-top" alt="Akazienhonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Akazienhonig</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="lindenbluetenhonig.jpg" class="card-img-top" alt="Lindenblütenhonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Lindenblütenhonig</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="sonnenblumenhonig.jpg" class="card-img-top" alt="Sonnenblumenhonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Sonnenblumenhonig</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <table class="table price-table mt-5">
             <thead>
                 <tr>
                     <th>Artikel</th>
@@ -59,6 +88,21 @@
             </thead>
             <tbody>
                 <tr>
+                    <td>Honig, 1kg</td>
+                    <td>1kg</td>
+                    <td>14,00€</td>
+                </tr>
+                <tr>
+                    <td>Honig, 1/2kg</td>
+                    <td>1/2kg</td>
+                    <td>8,00€</td>
+                </tr>
+                <tr>
+                    <td>Honig, 1/4kg</td>
+                    <td>1/4kg</td>
+                    <td>5,00€</td>
+                </tr>
+                <tr>
                     <td>Propolis Tinktur</td>
                     <td>20ml</td>
                     <td>4,90€</td>
@@ -66,7 +110,7 @@
                 <tr>
                     <td>Propolino Pflegestift</td>
                     <td>4,8g</td>
-                    <td>3€</td>
+                    <td>3,00€</td>
                 </tr>
                 <tr>
                     <td>Propolis-Cremen</td>
