--- a/produkte.html
+++ b/produkte.html
@@ -77,6 +77,42 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="kastanienhonig.jpg" class="card-img-top" alt="Kastanienhonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Kastanienhonig</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="rapshonig.jpg" class="card-img-top" alt="Rapshonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Rapshonig</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="bluetencremehonig.jpg" class="card-img-top" alt="Blütencremehonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Blütencremehonig</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="waldhonig.jpg" class="card-img-top" alt="Waldhonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Waldhonig</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                </div>
+            </div>
         </div>
         <table class="table price-table mt-5">
             <thead>
@@ -151,6 +187,6 @@
         </table>
     </div>
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMneT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
