--- a/index.html
+++ b/index.html
@@ -39,11 +39,78 @@
             </div>
         </div>
     </nav>
-    
-    <div class="container mt-5">
-        <h1>Hello, world!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Imkerei Weissenbacher - Willkommen</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #fff8dc;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            color: #FFA500;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Willkommen bei Imkerei Weissenbacher - Ihr Zuhause für 100% reinen Naturhonig</h1>
+        <p>Unsere Imkerei erstreckt sich über die malerischen Landschaften der Waldheimat, wo unsere Bienenstöcke sorgfältig an verschiedenen Orten platziert sind. Was unsere Imkerei besonders auszeichnet, ist die unberührte Natur, in der unsere Bienen leben. Hier, inmitten der Waldheimat, gedeihen unsere Bienenvölker in einer Umgebung, die frei von jeglichen Schadstoffen, Spritzmitteln oder anderen Umweltbelastungen ist.</p>
+        <p>Diese einzigartige natürliche Umgebung bietet unseren Bienen die perfekten Bedingungen, um reine, unverfälschte Blütennektare und den charakteristischen Waldhonig zu sammeln. Unser Honig ist daher ein wahres Naturprodukt, das sich durch Reinheit und unverfälschten Geschmack auszeichnet. Von den zarten Blüten der Waldheimat bis zu den Tiefen des Waldes, bieten wir Ihnen Honig in seiner reinsten Form.</p>
+        <p>Wir sind stolz darauf, Ihnen Honig anzubieten, der nicht nur köstlich schmeckt, sondern auch die Liebe und Sorgfalt unserer Bienen für die Natur widerspiegelt. Entdecken Sie die Aromen der unberührten Waldheimat in jedem Glas Imkerei Weissenbacher Honig, sei es der sanfte Geschmack von Blütennektar oder der kräftige Charakter des Waldhonigs.</p>
+        <p>Erfahren Sie mehr über unsere Imkerei, unsere Produkte und die Leidenschaft, die wir in jede Honiggewinnung stecken. Willkommen in der Welt des naturbelassenen Genusses, willkommen bei Imkerei Weissenbacher.</p>
     </div>
-    
+</body>
+<div class="container mt-5">
+        <h2>Kleine Bildgalerie</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Kerzen.jpeg" class="card-img-top" alt="Akazienhonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Weihnachtliche Honiggeschenke</h5>
+                        <p class="card-text">Speziell für die Weihnachtszeit haben wir schön verpackte Geschenke für euch bereit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Erntezeit.jpeg" class="card-img-top" alt="Lindenblütenhonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Bienen in der Erntezeit</h5>
+                        <p class="card-text">Hohes Treiben bei den Bienen während der Erntezeit.</p>
+                    </div>
+                </div>
+            </div>
+			<div class="col-md-4">
+                <div class="card">
+                    <img src="Schwarm1.jpeg" class="card-img-top" alt="Lindenblütenhonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Schwarm</h5>
+                        <p class="card-text">Bienenschwarm zieht in den Bienstock ein, Teil 1.</p>
+                    </div>
+                </div>
+            </div>
+			<div class="col-md-4">
+                <div class="card">
+                    <img src="Schwarm2.jpeg" class="card-img-top" alt="Lindenblütenhonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Schwarm</h5>
+                        <p class="card-text">Bienenschwarm zieht in den Bienstock ein, Teil 2.</p>
+                    </div>
+                </div>
+            </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
