--- a/kontakt.html
+++ b/kontakt.html
@@ -47,6 +47,24 @@
         <p>Adresse: Egg 209, 8672 St. Kathrein am Hauenstein</p>
         <p>Telefonnummer Manfred: <a href="tel:+436648632481">+43 664 8632481</a></p>
         <p>Telefonnummer Dagmar: <a href="tel:+436605235206">+43 660 5235206</a></p>
+		
+		<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>St. Kathrein am Hauenstein - Google Maps</title>
+</head>
+<body>
+    <h1>Willkommen in St. Kathrein am Hauenstein</h1>
+    <p>Entdecken Sie den Ort "St. Kathrein am Hauenstein" auf der Karte:</p>
+    <iframe
+        width="600"
+        height="450"
+        frameborder="0"
+        style="border:0"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10784.217632333768!2d15.68183337005895!3d47.488853438865064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476e72b12904486f%3A0x790498df4cce4211!2s8672%20St.%20Kathrein%20am%20Hauenstein!5e0!3m2!1sde!2sat!4v1699121483064!5m2!1sde!2sat"
+        allowfullscreen>
+    </iframe>
+</body>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
