--- a/produkte.html
+++ b/produkte.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Produkte - Imkerei Weissenbacher</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7Rxnatzjc5pxSGFJ5MBlrJ66FkjIWHMcB6ah5mZPv6o" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
         body {
             background-color: #fff8dc; /* Hellgelb */
         }
-        .price-table {
+		.price-table {
             width: 70%;
             margin: 0 auto;
         }
@@ -47,8 +47,9 @@
         </div>
     </nav>
     
+
     <div class="container mt-5">
-        <h2>Unsere Produkte</h2>
+        <h2>Unsere Produkte und Preise</h2>
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
@@ -114,7 +115,7 @@
                 </div>
             </div>
         </div>
-        <table class="table price-table mt-5">
+  <table class="table price-table mt-5">
             <thead>
                 <tr>
                     <th>Artikel</th>
@@ -186,7 +187,6 @@
             </tbody>
         </table>
     </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMneT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
