--- a/stockwaage.html
+++ b/stockwaage.html
@@ -39,9 +39,42 @@
             </div>
         </div>
     </nav>
-    
+    <!DOCTYPE html>
     <div class="container mt-5">
-        <h2>Stockwaage</h2>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HoneyPi - Die intelligente Bienenstocküberwachung</title>
+</head>
+<body>
+    <h2>Unsere selbst erstellte Bienenstockwaage mit HoneyPi!</h1>
+    <p>HoneyPi ist ein innovatives Projekt zur Überwachung von Bienenstöcken mithilfe von Raspberry Pi.</p>
+
+    <h3>Wie funktioniert HoneyPi?</h2>
+    <p>HoneyPi nutzt Sensoren, die Außerhalb und im Bienenstock installiert sind, um wichtige Daten zu sammeln:</p>
+    <ul>
+        <li><strong>Temperatur und Luftfeuchtigkeit:</strong> Sensoren messen die Umgebungsbedingungen im Bienenstock.</li>
+        <li><strong>Gewicht:</strong> Ein Wiegesystem erfasst das Gewicht des Bienenstocks, was auf den Honigvorrat hinweisen kann.</li>
+    </ul>
+
+    <h3>Warum HoneyPi?</h2>
+    <p>HoneyPi ermöglicht Imkern, Forschern und Naturschützern eine detaillierte Überwachung der Bienenstöcke. Dies hat mehrere Vorteile:</p>
+    <ul>
+        <li><strong>Gesunde Bienen:</strong> Durch die Überwachung können Gesundheitsprobleme frühzeitig erkannt und behandelt werden.</li>
+        <li><strong>Effiziente Imkerei:</strong> Imker können den Honigertrag besser planen und optimieren.</li>
+        <li><strong>Forschung und Bildung:</strong> HoneyPi trägt zur Erforschung des Bienenverhaltens bei und dient der Bildung über Bienen und Ökosysteme.</li>
+    </ul>
+
+    <h3>Open Source und Gemeinschaftsprojekt</h2>
+    <p>HoneyPi ist ein Open-Source-Projekt, das von einer engagierten Gemeinschaft unterstützt wird. Sie können HoneyPi selbst erstellen und anpassen, um die Bedürfnisse Ihres Bienenstocks zu erfüllen.</p>
+
+    <h3>Sie möchten auch einen HoneyPi betreiben?</h2>
+    <p>Mit HoneyPi können Sie Ihre Bienenstöcke in Echtzeit überwachen und einen wichtigen Beitrag zum Schutz und zur Gesundheit der Bienen leisten. Besuchen Sie die <a href="https://www.honeypi.de">offizielle Website von HoneyPi</a> für weitere Informationen und Anleitungen.</p>
+</body>
+
+
+
+        <h2>Daten und Bilder der eigenen Stockwaage</h2>
         <p>Hier finden Sie Informationen zur Stockwaage in unserer Imkerei.</p>
         <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/1467780/widgets/355376"></iframe>
     </div>
