--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imkerei Weissenbacher</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
         body {
             background-color: #fff8dc; /* Hellgelb */
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            color: #FFA500;
         }
     </style>
 </head>
@@ -39,30 +50,7 @@
             </div>
         </div>
     </nav>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imkerei Weissenbacher - Willkommen</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #fff8dc;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        h1 {
-            color: #FFA500;
-        }
-    </style>
-</head>
-<body>
+
     <div class="container">
         <h1>Willkommen bei Imkerei Weissenbacher - Ihr Zuhause für 100% reinen Naturhonig</h1>
         <p>Unsere Imkerei erstreckt sich über die malerischen Landschaften der Waldheimat, wo unsere Bienenstöcke sorgfältig an verschiedenen Orten platziert sind. Was unsere Imkerei besonders auszeichnet, ist die unberührte Natur, in der unsere Bienen leben. Hier, inmitten der Waldheimat, gedeihen unsere Bienenvölker in einer Umgebung, die frei von jeglichen Schadstoffen, Spritzmitteln oder anderen Umweltbelastungen ist.</p>
@@ -70,8 +58,8 @@
         <p>Wir sind stolz darauf, Ihnen Honig anzubieten, der nicht nur köstlich schmeckt, sondern auch die Liebe und Sorgfalt unserer Bienen für die Natur widerspiegelt. Entdecken Sie die Aromen der unberührten Waldheimat in jedem Glas Imkerei Weissenbacher Honig, sei es der sanfte Geschmack von Blütennektar oder der kräftige Charakter des Waldhonigs.</p>
         <p>Erfahren Sie mehr über unsere Imkerei, unsere Produkte und die Leidenschaft, die wir in jede Honiggewinnung stecken. Willkommen in der Welt des naturbelassenen Genusses, willkommen bei Imkerei Weissenbacher.</p>
     </div>
-</body>
-<div class="container mt-5">
+
+    <div class="container mt-5">
         <h2>Kleine Bildgalerie</h2>
         <div class="row">
             <div class="col-md-4">
@@ -84,7 +72,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card">
+                <div class "card">
                     <img src="Erntezeit.jpeg" class="card-img-top" alt="Lindenblütenhonig">
                     <div class="card-body">
                         <h5 class="card-title">Bienen in der Erntezeit</h5>
@@ -92,7 +80,7 @@
                     </div>
                 </div>
             </div>
-			<div class="col-md-4">
+            <div class="col-md-4">
                 <div class="card">
                     <img src="Schwarm1.jpeg" class="card-img-top" alt="Lindenblütenhonig">
                     <div class="card-body">
@@ -101,7 +89,7 @@
                     </div>
                 </div>
             </div>
-			<div class="col-md-4">
+            <div class="col-md-4">
                 <div class="card">
                     <img src="Schwarm2.jpeg" class="card-img-top" alt="Lindenblütenhonig">
                     <div class="card-body">
@@ -110,6 +98,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
