--- a/info.html
+++ b/info.html
@@ -82,7 +82,7 @@
                     <img src="Laus1.jpeg" class="card-img-top" alt="Akazienhonig">
                     <div class="card-body">
                         <h5 class="card-title">Die Waldlaus, Teil 1</h5>
-                        <p class="card-text">Bundes treiben zwischen den Nadeln.</p>
+                        <p class="card-text">Buntes treiben zwischen den Nadeln.</p>
                     </div>
                 </div>
             </div>
