--- a/index.html
+++ b/index.html
@@ -72,7 +72,16 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class "card">
+                <div class="card">
+                    <img src="Adventkerzen.jpeg" class="card-img-top" alt="Akazienhonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Adventkerzen</h5>
+                        <p class="card-text">Adventkerzen gibt es bei uns auch wieder.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
                     <img src="Erntezeit.jpeg" class="card-img-top" alt="Lindenblütenhonig">
                     <div class="card-body">
                         <h5 class="card-title">Bienen in der Erntezeit</h5>
