--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">Imkerei Weissenbacher</a>
+            <img src="logo.png" alt="Logo" class="navbar-logo" /> <!-- Hier füge dein Logo-Bild hinzu -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
