--- a/index.html
+++ b/index.html
@@ -66,6 +66,42 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
+                    <img src="Schnee1Produkte.jpeg" class="card-img-top" alt="Akazienhonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Bauernmarkt Mürzzuschlag</h5>
+                        <p class="card-text">Eine kleine Auswahl unserer Produkte zur Weihnachtszeit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Schnee1.jpeg" class="card-img-top" alt="Akazienhonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Bauernmarkt Mürzzuschlag</h5>
+                        <p class="card-text">Egal bei welchen Wetter, wir sind gerne für euch da.(Teil 1)</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Schnee2.jpeg" class="card-img-top" alt="Akazienhonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Bauernmarkt Mürzzuschlag</h5>
+                        <p class="card-text">Egal bei welchen Wetter, wir sind gerne für euch da.(Teil 2)</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="Schnee3.jpeg" class="card-img-top" alt="Akazienhonig">
+                    <div class="card-body">
+                        <h5 class="card-title">Bauernmarkt Mürzzuschlag</h5>
+                        <p class="card-text">Egal bei welchen Wetter, wir sind gerne für euch da.(Teil 3)</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
                     <img src="Kerzen.jpeg" class="card-img-top" alt="Akazienhonig">
                     <div class="card-body">
                         <h5 class="card-title">Weihnachtliche Honiggeschenke</h5>
@@ -122,7 +158,7 @@
     fetch('counter.txt')
         .then(response => response.text())
         .then(data => {
-            document.getElementById("pageViews").innerHTML = "Seitenaufrufe: " + data;
+            document.getElementById("pageViews").innerHTML = "Version: " + data;
         })
         .catch(error => {
             console.error('Fehler beim Abrufen der Seitenaufrufe:', error);
