--- a/kontakt.html
+++ b/kontakt.html
@@ -10,6 +10,9 @@
             background-color: #fff8dc; /* Hellgelb */
         }
     </style>
+    <link rel="icon" href="favicon-16x16.png" type="image/png">
+    <link rel="shortcut icon" href="favicon-16x16.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
