--- a/produkte.html
+++ b/produkte.html
@@ -17,6 +17,9 @@
             background-color: #f8f9fa; /* Hellgrau */
         }
     </style>
+    <link rel="icon" href="favicon-16x16.png" type="image/png">
+    <link rel="shortcut icon" href="favicon-16x16.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
