--- a/index.html
+++ b/index.html
@@ -165,7 +165,17 @@
 
     <!-- Hier wird der Seitenzähler angezeigt -->
 <p id="pageViews">Lade...</p>
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1909GHGGX8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-1909GHGGX8');
+</script>
+    
 <script>
     // JavaScript-Code, um die Seitenaufrufzahl von der Datei zu lesen und anzuzeigen
     fetch('counter.txt')
