--- a/info.html
+++ b/info.html
@@ -141,6 +141,17 @@ Propolis hat starke antibakterielle Eigenschaften und kann dazu beitragen, das W
 Es ist wichtig zu beachten, dass Propolis auch allergische Reaktionen auslösen kann, insbesondere bei Personen, die gegen Bienenprodukte allergisch sind. Bevor du Propolis in großem Umfang verwendest, ist es ratsam, mit einem Gesundheitsdienstleister zu sprechen, um sicherzustellen, dass es für dich sicher ist.</p>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1909GHGGX8"></script>
+	    
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1909GHGGX8');
+</script>
+	    
 </body>
 </html>
 
