--- a/produkte.html
+++ b/produkte.html
@@ -128,6 +128,15 @@
                     </div>
                 </div>
             </div>
+	    <div class="col-md-4">
+		<div class="card">
+		    <img src="UebersichtProdukte.jpeg" class="card-img-top" alt="Weitere Produkte">
+		    <div class="card-body">
+			<h5 class="card-title">Weitere Produkte</h5>
+			
+		    </div>
+		</div>
+	    </div>
         </div>
   <table class="table price-table mt-5">
             <thead>
